--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
-TELEGRAM_TOKEN=<YOUR_TOKEN>
-CHAT_ID=<YOUR_CHAT_ID>
+TELEGRAM_TOKEN=
+CHAT_ID=
+
+STRIPE__KEY=
+STRIPE_SECRET_KEY=
+
+ENDPOINT_SECRET_WEBHOOK=
