--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,7 @@
-TELEGRAM_TOKEN=
-CHAT_ID=
+TELEGRAM_TOKEN=<YOUR_TOKEN>
+CHAT_ID=<YOUR_CHAT_ID>
 
-STRIPE__KEY=
-STRIPE_SECRET_KEY=
+STRIPE_SECRET_KEY=<YOUR_STRIPE_SECRET_KEY>
+STRIPE_PUBLISHABLE_KEY=<YOUR_STRIPE_PUBLISHABLE_KEY>
 
-ENDPOINT_SECRET_WEBHOOK=
+ENDPOINT_SECRET_WEBHOOK=<YOUR_SECRET_WEEBHOOK>
