--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,14 @@ jobs:
         with:
           python-version: "3.12"
 
+      - name: Load environment variables
+        env:
+          ENV_FILE_PATH: .env
+        run: |
+          if [ -f "$ENV_FILE_PATH" ]; then
+            export $(grep -v '^#' "$ENV_FILE_PATH" | xargs)
+          fi
+
       - name: Install requirements
         run: |
           python -m pip install --upgrade pip
