refactor github action for correct running tests

--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,6 @@ STRIPE_SECRET_KEY=<YOUR_STRIPE_SECRET_KEY>
 STRIPE_PUBLISHABLE_KEY=<YOUR_STRIPE_PUBLISHABLE_KEY>
 
 ENDPOINT_SECRET_WEBHOOK=<YOUR_SECRET_WEEBHOOK>
+
+DJANGO_SETTINGS_MODULE=library_api.settings  # include this only for running tests
+
