--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,4 +36,6 @@ jobs:
         run: flake8
       - name: Run tests
         timeout-minutes: 5
-        run: python manage.py test
+        run: |
+          export DJANGO_SETTINGS_MODULE=library_api.settings
+          python manage.py test
