--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Set environment variables
+        env:
+          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          DEBUG: ${{ secrets.DEBUG }}
+        run: echo "Environment variables set"
+
       - name: Run flake8
         run: flake8
+
       - name: Run tests
         timeout-minutes: 5
+        env:
+          DJANGO_SECRET_KEY: ${{ secrets.DJANGO_SECRET_KEY }}
+          DEBUG: ${{ secrets.DEBUG }}
         run: |
           export DJANGO_SETTINGS_MODULE=library_api.settings
           python manage.py test
